# tiktok-api-integration

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  app.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/v1/endpoints/: analytics.py  auth.py  tiktok.py
app/config/: database.py  settings.py
app/core/: cache.py  oauth.py  rate_limiter.py  security.py
app/models/: analytics.py  tiktok_models.py  token.py  user.py
app/schemas/: auth.py  tiktok.py
app/services/: analytics_service.py  auth_service.py  tiktok_commercial_service.py  tiktok_integration_service.py  tiktok_service.py
scripts/: setup.sh  show_tiktok_analytics.py  test_tiktok_flow.py
tests/: conftest.py  test_auth.py  test_tiktok.py
